feat: refactor infra with nginx templates, update ports & add welcome page
